@@ -3,7 +3,8 @@
 
 Enhancements
  - [web] create card from sender or recipient address (#3002, #4610)
- - [core] baseDN now accept dynamic domain values (#3685)
+ - [core] baseDN now accept dynamic domain values (#3685 - sponsored by iRedMail)
+ - [core] we now handle optional and non-required attendee states
 
 Bug fixes
  - [web] fixed all-day event dates with different timezone
